--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # REACT_APP_API=http://localhost:8080
-REACT_APP_API=https://occasiodrive-production-7e4b.up.railway.app/
+REACT_APP_API=https://occasiodrive-production-7e4b.up.railway.app
